syntax = "proto3";

package ai.metathings.service.deviced;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message QueryFramesFromFlowRequest {
	OpDevice device = 1;
	google.protobuf.Timestamp from = 2;
	google.protobuf.Timestamp to = 3;
}

message QueryFramesFromFlowResponse {
	message Pack {
		Flow flow = 1;
		repeated Frame frames = 2;
	}
	repeated Pack packs = 1;
}
